# clair-a

./: .gitignore  LICENSE  NOTICE  README.md  clair_a.py  pyproject.toml
fense/: __init__.py  data.py  download_utils.py  evaluator.py  model.py
metric-eval-scripts/: compute_scores.py  rewrite_input.py
